[package]
name = "adbium"
version = "0.1.2"
edition = "2021"
authors = ["nitrogenez", "Rikonardo"]
keywords = ["adb", "android", "nitrogenez", "android-tools", "android-tool"]

description = "Client library for adb"

license = "LGPL-3.0-or-later"
license-file = "LICENSE.md"
readme = "README.md"

repository = "https://github.com/nitrogenez/adbium"
